--- a/san francisco/style.css
+++ b/san francisco/style.css
@@ -58,8 +58,10 @@ img {
 .wrapper {
     width: 70%;
     margin:0 auto;
-    background: rgba(250,250,250,0.5);
+    /* background: rgba(250,250,250,0.5); */
     padding:1rem;
+    background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
 
 }
 
