--- a/layout_responsive/style.css
+++ b/layout_responsive/style.css
@@ -19,6 +19,8 @@ body {
 #mainHeader {
     background:#1e4ba4;
     color: #efefef;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 #mainHeader a { /*tutti i link dentro mainHeader*/
@@ -34,6 +36,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 3rem;
 }
 
 .topMenu ul {
@@ -66,13 +69,25 @@ body {
 /*                                SEZIONE MAIN                                */
 /* -------------------------------------------------------------------------- */
 
+#tipoViaggio {
+    padding-top: 4rem;
+    margin-bottom: 6rem;
+}
 .tipoViaggioGrid {
     display: flex;
     flex-wrap: wrap;
 }
 
 .viaggioItem {
-   width: 50%;
+   
+   margin-left: 0.5rem;
+   margin-right: 0.5rem;
+   width: calc(50% - 1rem);
+     /* con CALC posso mischiare le unità di misura. Così mi calcolo
+        la larghezza precisa in percentuale, alla quale sottraggo il valore
+        dei margini (0.5rem a sx, 0.5rem a dx = 1rem)*/
+
+   margin-bottom: 1rem;
 
     position:relative;
 
@@ -109,7 +124,8 @@ body {
 
     width:100%;
     height:20rem;
-    border:0.25rem solid white;
+    margin-bottom: 1rem;
+    /* border:0.25rem solid white; */
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -159,10 +175,13 @@ body {
     /* REGOLE PER SCHERMI GRANDI */ 
 
     .viaggioItem { /*su desktop occupa 1/5 dello spazio */
-        width: calc(20% - 1rem);
         margin-left: 0.5rem;
         margin-right: 0.5rem;
-
+        
+        width: calc(20% - 1rem);
+         /* con CALC posso mischiare le unità di misura. Così mi calcolo
+        la larghezza precisa in percentuale, alla quale sottraggo il valore
+        dei margini (0.5rem a sx, 0.5rem a dx = 1rem)*/
 
 
 
@@ -170,11 +189,19 @@ body {
 
     .cittaItem { /*dimensione su schermi grandi*/
         width:33.3%;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+        margin-bottom: 1rem;
+
+        width:calc(33.3% - 1rem);
+        /* con CALC posso mischiare le unità di misura. Così mi calcolo
+        la larghezza precisa in percentuale, alla quale sottraggo il valore
+        dei margini (0.5rem a sx, 0.5rem a dx = 1rem)*/
     }
 
     .cittaItem:nth-of-type(1), .cittaItem:nth-of-type(2) {
     /*il primo E il secondo elemento cittaItem*/
-        width:50%;
+        width:calc(50% - 1rem);
     }
 
 
