--- a/sass_intro/css/style.css
+++ b/sass_intro/css/style.css
@@ -1,302 +1,1 @@
-/* -------------------------------------------------------------------------- */
-/*                             FUNZIONI BASE SASS                             */
-/* -------------------------------------------------------------------------- */
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-html {
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  margin: 0;
-}
-
-main {
-  display: block;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-a {
-  background-color: transparent;
-}
-
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-img {
-  border-style: none;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-
-button,
-input {
-  overflow: visible;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-[type=button],
-[type=reset],
-[type=submit],
-button {
-  -webkit-appearance: button;
-}
-
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner,
-button::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring,
-button:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-textarea {
-  overflow: auto;
-}
-
-[type=checkbox],
-[type=radio] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0;
-}
-
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type=search] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
-
-details {
-  display: block;
-}
-
-summary {
-  display: list-item;
-}
-
-template {
-  display: none;
-}
-
-[hidden] {
-  display: none;
-}
-body {
-  font-family: "Helvetica", Arial, sans-serif;
-}
-
-h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  font-family: "Garmond", Times, serif;
-}
-
-h2 {
-  font-size: 2rem;
-  font-weight: bold;
-  font-family: "Garmond", Times, serif;
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: normal;
-}
-
-p {
-  font-size: 1rem;
-}
-
-.hugeText, #hero h1 {
-  font-size: 8rem;
-  font-weight: bold;
-  color: #105f97;
-}
-
-body {
-  background: blue;
-  background: -webkit-gradient(linear, left top, left bottom, from(blue), to(purple));
-  background: linear-gradient(180deg, blue 0%, purple 100%);
-}
-
-.button {
-  background: #ffcc00;
-  padding: 0.5rem 1.5rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  border-radius: 10px;
-  color: #efefef;
-  border: 1px solid #efefef;
-}
-.button:hover {
-  background: #e6b800;
-}
-
-.send {
-  background: #105f97;
-  padding: 0.5rem 1.5rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  border-radius: 10px;
-  color: #105f97;
-  border: 1px solid #105f97;
-  background: transparent;
-  border: 1px solid #105f97;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-.send:hover {
-  background: #0e5080;
-}
-.send:hover {
-  background: #105f97;
-  color: #efa068;
-}
-
-ul.menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-ul.menu li {
-  padding: 0.5rem 1.5rem;
-}
-ul.menu li a {
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: bold;
-}
-ul.menu li a.active {
-  color: #ffcc00;
-  border: 1px solid #105f97;
-}
-ul.menu li a:hover {
-  background: #105f97;
-  color: #efefef;
-}
-
-#hero {
-  background: #545454;
-  background: #7500b3;
-  background: #ff6666;
-  background: #990000;
-  background: #e61a1a;
-  background: url("https://source.unsplash.com/1920x1080/city");
-  background-size: cover;
-}
-#hero h1 {
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.myTable tr {
-  background: #efefef;
-}
-.myTable tr:nth-of-type(odd) {
-  background: #e2e2e2;
-}
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:0.67em 0}hr{-webkit-box-sizing:content-box;box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:0.35em 0.75em 0.625em}legend{-webkit-box-sizing:border-box;box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{-webkit-box-sizing:border-box;box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}body{font-family:"Helvetica",Arial,sans-serif}h1{font-size:3rem;font-weight:bold;font-family:"Garmond",Times,serif}h2{font-size:2rem;font-weight:bold;font-family:"Garmond",Times,serif}h3{font-size:1.5rem;font-weight:normal}p{font-size:1rem}#hero h1,.hugeText{font-size:8rem;font-weight:bold;color:#105f97}body{background:blue;background:-webkit-gradient(linear,left top,left bottom,from(blue),to(purple));background:linear-gradient(180deg,blue 0%,purple 100%)}.button{background:#ffcc00;padding:0.5rem 1.5rem;text-transform:uppercase;text-decoration:none;border-radius:10px;color:#efefef;border:1px solid #efefef}.button:hover{background:#e6b800}.send{background:#105f97;padding:0.5rem 1.5rem;text-transform:uppercase;text-decoration:none;border-radius:10px;color:#105f97;border:1px solid #105f97;background:transparent;border:1px solid #105f97;-webkit-transition:all 0.5s ease-in-out;transition:all 0.5s ease-in-out}.send:hover{background:#0e5080}.send:hover{background:#105f97;color:#efa068}ul.menu{list-style-type:none;margin:0;padding:0;display:-webkit-box;display:-ms-flexbox;display:flex}ul.menu li{padding:0.5rem 1.5rem}ul.menu li a{text-transform:uppercase;text-decoration:none;font-weight:bold}ul.menu li a.active{color:#ffcc00;border:1px solid #105f97}ul.menu li a:hover{background:#105f97;color:#efefef}#hero{background:#545454;background:#7500b3;background:#ff6666;background:#990000;background:#e61a1a;background:url("https://source.unsplash.com/1920x1080/city");background-size:cover}#hero h1{color:rgba(255,255,255,0.5)}.myTable tr{background:#efefef}.myTable tr:nth-of-type(odd){background:#e2e2e2}
